<resources>

    <string name="app_name">Dota 2 Heroes Review</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agility">Agility</string>
    <string name="strength">Strength</string>
    <string name="intell">Intelligence</string>

    <string name="hero_spell">Hero Spell</string>
    <string name="hero_ability">Hero Ability</string>
    <string name="hero_role">Hero Role</string>
    <string name="overview">Overview</string>
    <string name="detail">Detail</string>

    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="share_image_transition">share_image_transition</string>

</resources>
