<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:fontFamily="sans-serif"
            android:paddingLeft="@dimen/margin_medium"
            android:text="@string/hero_spell"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"/>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_hero_spell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:fontFamily="sans-serif"
        android:paddingLeft="@dimen/margin_medium"
        android:text="@string/hero_ability"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:layout_margin="@dimen/margin_medium_2">

            <ImageView
                android:id="@+id/intelligence"
                android:layout_width="@dimen/small_image"
                android:layout_height="@dimen/small_image"
                android:src="@drawable/intelligence" />

            <TextView
                android:id="@+id/tv_intelligence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/intelligence"
                android:layout_toRightOf="@+id/intelligence"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingTop="@dimen/margin_medium"
                android:text="Hello"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/agility"
                android:layout_width="@dimen/small_image"
                android:layout_height="@dimen/small_image"
                android:layout_centerVertical="true"
                android:src="@drawable/agility" />

            <TextView
                android:id="@+id/tv_agility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/agility"
                android:layout_toEndOf="@+id/agility"
                android:layout_toRightOf="@+id/agility"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingTop="@dimen/margin_medium"
                android:text="Hello"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/strength"
                android:layout_width="@dimen/small_image"
                android:layout_height="@dimen/small_image"
                android:layout_alignParentBottom="true"
                android:src="@drawable/strength" />

            <TextView
                android:id="@+id/tv_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/strength"
                android:layout_toEndOf="@+id/strength"
                android:layout_toRightOf="@+id/strength"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingTop="@dimen/margin_medium"
                android:text="hello"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/armor"
                android:layout_width="@dimen/small_image"
                android:layout_height="@dimen/small_image"
                android:layout_alignLeft="@+id/movement_speed"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/movement_speed"
                android:layout_marginBottom="@dimen/margin_small"
                android:src="@drawable/defense" />

            <ImageView
                android:id="@+id/movement_speed"
                android:layout_width="@dimen/small_image"
                android:layout_height="@dimen/small_image"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/speed" />

            <ImageView
                android:id="@+id/damage"
                android:layout_width="@dimen/small_image"
                android:layout_height="@dimen/small_image"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/attack" />

            <TextView
                android:id="@+id/tv_damage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/damage"
                android:layout_toEndOf="@+id/damage"
                android:layout_toRightOf="@+id/damage"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingTop="@dimen/margin_medium"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_movement_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/movement_speed"
                android:layout_toEndOf="@+id/movement_speed"
                android:layout_toRightOf="@+id/movement_speed"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingTop="@dimen/margin_medium"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_armor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/armor"
                android:layout_toEndOf="@+id/armor"
                android:layout_toRightOf="@+id/armor"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingTop="@dimen/margin_medium_2"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif"
                android:paddingLeft="@dimen/margin_medium_2"
                android:text="@string/hero_role"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_marginTop="4dp"
                android:lineSpacingMultiplier="1.3"
                android:padding="@dimen/margin_medium"
                android:text="#ကြ်န္ေတာ္တို႕ခ်စ္တဲ႕လြယ္အိပ္ႀကီးနဲဲ႔အတူဝုန္းျကဆို႕……"
                android:textColor="#000"
                android:textSize="@dimen/text_regular_2" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif"
                android:paddingLeft="@dimen/margin_medium_2"
                android:text="@string/overview"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <xyz.winthan.dota2heros.component.MMExpendableTextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:lineSpacingMultiplier="1.3"
                android:maxLines="5"
                android:padding="@dimen/margin_medium"
                android:text="#ကြ်န္ေတာ္တို႕ခ်စ္တဲ႕လြယ္အိပ္ႀကီးနဲဲ႔အတူဝုန္းျကဆို႕……"
                android:textColor="#000"
                android:textSize="@dimen/text_regular_2" />

            <Button
                android:id="@+id/btn_read_more_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#fff"
                android:text="@string/read_more"
                android:textAllCaps="false" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif"
                android:paddingLeft="@dimen/margin_medium_2"
                android:text="@string/detail"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <xyz.winthan.dota2heros.component.MMExpendableTextView
                android:id="@+id/tv_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:lineSpacingMultiplier="1.3"
                android:maxLines="5"
                android:padding="@dimen/margin_medium"
                android:paddingLeft="@dimen/margin_medium_2"
                android:text="#ကြ်န္ေတာ္တို႕ခ်စ္တဲ႕လြယ္အိပ္ႀကီးနဲဲ႔အတူဝုန္းျကဆို႕……"
                android:textColor="#000"
                android:textSize="@dimen/text_regular_2" />

            <Button
                android:id="@+id/btn_read_more_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#fff"
                android:text="@string/read_more"
                android:textAllCaps="false" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>